--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   </head>
   <body>
-    <div id="root"></div>
+		<header class="container page-header">
+			<h1>Simple React To-do List App</h1>
+			<p class="lead">Enter text below and hit enter key to add new items. Items only persist for your current page view.</p>
+		</header>
+		<div class="container" id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
