--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 		<header class="container page-header">
 			<h1>Simple React To-do List App</h1>
-			<p class="lead">Enter text below and hit enter key to add new items. Items only persist for your current page view.</p>
+			<p class="lead">Enter text below and hit enter key to add new items. Items will persist with local storage.</p>
 		</header>
 		<div class="container" id="root"></div>
     <!--
